# server

./: .gitignore  Cargo.toml  README.md  final_sync_test.json
.kiro/specs/volebarn/: PERFORMANCE_UPDATE.md  design.md  requirements.md  tasks.md
.kiro/steering/: rust-development-standards.md
storage/: README.md
storage/files/: .gitkeep
storage/metadata/: .gitkeep
storage/temp/: .gitkeep
volebarn-benchmarks/: BENCHMARK_RESULTS.md  Cargo.toml  README.md  compression_benchmark_results.txt
volebarn-benchmarks/benches/: compression.rs  serialization.rs
volebarn-benchmarks/src/: generators.rs  lib.rs  simd_utils.rs  test_data.rs
volebarn-client/: Cargo.toml
volebarn-client/examples/: test_client_types.rs
volebarn-client/src/: chunked_upload.rs  client.rs  config.rs  error.rs  graceful_degradation.rs  hash.rs  lib.rs  metrics.rs  offline_queue.rs  resilience_tests.rs  retry.rs  serialization.rs  storage_types.rs  types.rs
volebarn-client/tests/: bulk_operations_test.rs  bulk_operations_unit_test.rs  directory_operations.rs  single_file_operations.rs  sync_integration_test.rs
volebarn-console/: Cargo.toml
volebarn-console/examples/: file_watcher_demo.rs
volebarn-console/src/: app.rs  config.rs  conflict_resolver.rs  error.rs  file_index.rs  file_watcher.rs  lib.rs  local_file_manager.rs  main.rs  sync_manager.rs
volebarn-console/src/app/: tests.rs
volebarn-console/src/config/: tests.rs
volebarn-console/src/file_watcher/: tests.rs
volebarn-server/: Cargo.toml
volebarn-server/examples/: test_types.rs
volebarn-server/src/: error.rs  handlers.rs  hash.rs  lib.rs  main.rs  serialization.rs  server.rs  storage.rs  storage_types.rs  test_server.rs  time_utils.rs  tls.rs  types.rs
volebarn-server/storage/metadata/: IDENTITY  LOG  LOG.old.1756864492379769  LOG.old.1756864503703838  LOG.old.1756864517352949  MANIFEST-000005  MANIFEST-000021  OPTIONS-000023
volebarn-server/tests/: bulk_endpoints_test.rs  bulk_upload_test.rs  integration_test.rs  sync_endpoints_test.rs  sync_test.rs  tls_integration_test.rs  tls_test.rs
