[workspace]
members = [
    "volebarn-server",
    "volebarn-client", 
    "volebarn-console",
    "volebarn-benchmarks"
]
resolver = "2"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP server and client
axum = { version = "0.8", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tower = { version = "0.5", features = ["util"] }

# Storage and data structures
rocksdb = "0.24"
dashmap = "6.1"
bytes = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bitcode = "0.6"

# Compression
snap = "1.1"

# Hashing and crypto
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rustls = "0.23"

# Error handling and logging
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system monitoring
notify = "8.2"

# Utilities
uuid = { version = "1.18", features = ["v4"] }
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Development dependencies
tokio-test = "0.4"
tempfile = "3.21"
futures = "0.3"