[package]
name = "volebarn-benchmarks"
version = "0.1.0"
edition = "2021"

[features]
default = []
bitcode = ["dep:bitcode"]

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "compression"
harness = false

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
xxhash-rust = { workspace = true }
chrono = { workspace = true }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Serialization formats
bitcode = { version = "0.6", optional = true }

# SIMD optimizations
wide = "0.7"

# Compression algorithms
zstd = "0.13"
lz4_flex = "0.11"
brotli = "7.0"
snap = "1.1"

# Random data generation
rand = "0.8"
rand_chacha = "0.3"
fake = { version = "2.9", features = ["derive", "chrono"] }

# File I/O
tempfile = { workspace = true }

# System info
num_cpus = "1.16"

[dev-dependencies]
tokio-test = { workspace = true }