[package]
name = "volebarn-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
snap = { workspace = true }
xxhash-rust = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true }

# Additional client dependencies
fastrand = "2.0"
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }