[package]
name = "volebarn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
rocksdb = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
xxhash-rust = { workspace = true }
rustls = "0.21"
rustls-pemfile = "1.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
base64 = "0.21"

[dependencies.rcgen]
version = "0.12"
optional = true

[features]
default = []
self-signed-certs = ["rcgen"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }